force-app/main/default/objects/CompetitorsResult__c/CompetitorsResult__c.object-meta.xml
<CustomObject>
    <label>入札詳細結果</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>入札結果連番</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>