force-app/main/default/objects/CompetitorsResult__c/fields/CompetitorManual__c.field-meta.xml
<CustomField>
    <fullName>CompetitorManual__c</fullName>
    <label>入札参加者（手入力）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>