force-app/main/default/objects/CompetitorsResult__c/fields/FifthBidAmount__c.field-meta.xml
<CustomField>
    <fullName>FifthBidAmount__c</fullName>
    <label>5回目応札金額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>