force-app/main/default/objects/CompetitorsResult__c/fields/FirstBidAmount__c.field-meta.xml
<CustomField>
    <fullName>FirstBidAmount__c</fullName>
    <label>1回目応札金額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>