force-app/main/default/objects/CompetitorsResult__c/fields/FourthBidAmount__c.field-meta.xml
<CustomField>
    <fullName>FourthBidAmount__c</fullName>
    <label>4回目応札金額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>