force-app/main/default/objects/CompetitorsResult__c/fields/IsDeclineFifthBid__c.field-meta.xml
<CustomField>
    <fullName>IsDeclineFifthBid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>5回目辞退</label>
    <type>Checkbox</type>
</CustomField>