force-app/main/default/objects/CompetitorsResult__c/fields/IsDeclineFirstBid__c.field-meta.xml
<CustomField>
    <fullName>IsDeclineFirstBid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1回目辞退</label>
    <type>Checkbox</type>
</CustomField>