force-app/main/default/objects/CompetitorsResult__c/fields/IsDeclineFourthBid__c.field-meta.xml
<CustomField>
    <fullName>IsDeclineFourthBid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4回目辞退</label>
    <type>Checkbox</type>
</CustomField>