force-app/main/default/objects/CompetitorsResult__c/fields/IsDeclineSixthBid__c.field-meta.xml
<CustomField>
    <fullName>IsDeclineSixthBid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6回目辞退</label>
    <type>Checkbox</type>
</CustomField>