force-app/main/default/objects/CompetitorsResult__c/fields/IsDeclineThirdBid__c.field-meta.xml
<CustomField>
    <fullName>IsDeclineThirdBid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3回目辞退</label>
    <type>Checkbox</type>
</CustomField>