force-app/main/default/objects/CompetitorsResult__c/fields/QuoteBiddingInquiry__c.field-meta.xml
<CustomField>
    <fullName>QuoteBiddingInquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>伺い件名</label>
    <referenceTo>QuoteBiddingInquiry__c</referenceTo>
    <relationshipName>InquiryCompetitorsShip</relationshipName>
    <type>Lookup</type>
</CustomField>