force-app/main/default/objects/CompetitorsResult__c/fields/SecondBidAmount__c.field-meta.xml
<CustomField>
    <fullName>SecondBidAmount__c</fullName>
    <label>2回目応札金額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>