force-app/main/default/objects/CompetitorsResult__c/fields/SixthBidAmount__c.field-meta.xml
<CustomField>
    <fullName>SixthBidAmount__c</fullName>
    <label>6回目応札金額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>