force-app/main/default/objects/CompetitorsResult__c/fields/ThirdBidAmount__c.field-meta.xml
<CustomField>
    <fullName>ThirdBidAmount__c</fullName>
    <label>3回目応札金額</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>